--- a/PaymentClient/package.json
+++ b/PaymentClient/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "~3.4.0",
     "angular-in-memory-web-api": "~0.2.4",
     "core-js": "^2.4.1",
+    "primeng": "^4.0.0-rc.2",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
