--- a/PaymentClient/package.json
+++ b/PaymentClient/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
     "angular-in-memory-web-api": "~0.2.4",
+    "angular2-busy": "^2.0.3",
     "core-js": "^2.4.1",
     "primeng": "^4.0.0-rc.2",
     "reflect-metadata": "^0.1.9",
